src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt;= 100,
&quot;A&quot;,
IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c,
&quot;B&quot;,
IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c,
&quot;C&quot;,
IF(0 &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c,
&quot;D&quot;,
&quot;&quot;
)
)
)
)</formula>
        <label>Company Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Score__c</fullName>
        <label>Company Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insight_1__c</fullName>
        <label>Insight 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_2__c</fullName>
        <label>Insight 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_3__c</fullName>
        <label>Insight 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
</CustomObject>